integracion con Bert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -115,3 +115,9 @@ vector.store.default.type=ELASTICSEARCH
 
 quarkus.vertx.event-loops-pool-size=16
 quarkus.vertx.max-event-loop-execute-time=10s
+
+
+# URL del servicio BERT
+bert.api.url=http://bert-service:8080/predict
+# Timeout para la llamada al modelo BERT
+bert.api.timeout=30s
