--- a/pom.xml
+++ b/pom.xml
@@ -294,7 +294,7 @@
                         <goals>
                             <goal>build</goal>
                             <goal>generate-code</goal>
-                            <goal>generate-code-tests</goal>
+                            <!--goal>generate-code-tests</goal-->
                             <goal>native-image-agent</goal>
                         </goals>
                     </execution>
